feat: surface refactoring